SERVER-20501 Invariant failure in configOptime during config reload